# pydantic-ai-gepa

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  NOTES.md  PROBLEM.md  README.md  REFACTOR.md  pyproject.toml
.beads/: issues.jsonl
.github/workflows/: ci.yml
docs/: gepa.md
examples/: classification.py  math_tools.py  optimize_skills.py  test_caching_demo.py  test_math_mcp.py  utils.py
optimization_results/: classification_optimization_20250917_010425.json  classification_optimization_20250917_020511.json  classification_optimization_20250917_130451.json  classification_optimization_20250917_150219.json  classification_optimization_20250917_151631.json  classification_optimization_20250917_212256.json  classification_optimization_20251105_081458.json  math_tools_optimization_20251105_094038.json
pydantic_ai_gepa/: __init__.py  adapter.py  cache.py  components.py  reflection.py  runner.py  signature.py  signature_agent.py  types.py
src/pydantic_ai_gepa/: __init__.py  adapter.py  cache.py  components.py  evaluation.py  evaluation_models.py  exceptions.py  input_type.py  inspection.py  logging_utils.py  openai_inspection.py  progress.py  reflection.py  runner.py  signature.py  signature_agent.py  skill_components.py  tool_components.py  types.py
src/pydantic_ai_gepa/adapters/: __init__.py  agent_adapter.py
src/pydantic_ai_gepa/durable_exec/: __init__.py  activities.py  plugin.py  runner.py  utils.py  workflow.py
src/pydantic_ai_gepa/gepa_graph/: __init__.py  datasets.py  deps.py  example_bank.py  graph.py  helpers.py  runtime.py
src/pydantic_ai_gepa/skills/: __init__.py  fs.py  models.py  search.py  skill_md.py
tests/: __init__.py  conftest.py  test_adapter_reflection.py  test_adapter_skills_components.py  test_cache.py  test_integration.py  test_math_tools_metric.py  test_nested_signature.py  test_openai_inspection.py  test_optimize_agent.py  test_optimize_agent_prompts.py  test_output_optimization.py  test_progress.py  test_runner_logging.py  test_signature.py  test_signature_agent.py  test_signature_agent_input_override.py  test_signature_user_content.py  test_signatures.py  test_skill_components.py  test_skills_fs.py  test_skills_search_provider.py  test_tool_components.py
tests/gepa_graph/: test_example_bank.py  test_graph.py  test_helpers.py  test_integration.py  test_manual_iteration.py  test_runtime.py  utils.py
tests/gepa_graph/evaluation/: test_evaluator.py  test_pareto_manager.py
tests/gepa_graph/models/: test_candidate.py  test_config.py  test_state.py  test_state_skill_activation.py
tests/gepa_graph/nodes/: test_merge_node.py  test_nodes.py  test_reflect.py
tests/gepa_graph/proposal/: test_example_bank_tools.py  test_instruction.py  test_llm.py  test_merge.py  test_reflective.py  test_skills_student_tools.py
tests/gepa_graph/selectors/: test_batch_sampler.py  test_candidate_selectors.py  test_component_selectors.py
tests/gepa_graph/steps/: test_merge_step.py  test_reflect_step.py  test_steps.py
(+33 files in other folders)
