[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pydantic_ai_gepa"]

[tool.hatch.build.targets.sdist]
include = ["src/pydantic_ai_gepa", "README.md", "pyproject.toml"]

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "pydantic-ai-gepa"
version = "0.1.0"
description = "GEPA optimization integration for pydantic-ai"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cloudpickle>=3.0.0",
    "pydantic-ai @ git+file:///Users/mh/labs/pydantic-ai@eeeddc5ec9bb99eaa5bd986aaad2773697aaae24",
    "pydantic-graph @ git+file:///Users/mh/labs/pydantic-ai@eeeddc5ec9bb99eaa5bd986aaad2773697aaae24#subdirectory=pydantic_graph",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "inline-snapshot>=0.29.0",
    "pytest-asyncio>=1.2.0",
    "ipdb>=0.13.13",
    "logfire>=4.7.0",
    "pyright>=1.1.405",
    "time-machine>=2.19.0",
]
